// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline renders child list items correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: calc(1rem / 2 * -1);
}

.c0 > * {
  margin: calc(1rem / 2);
}

.c0 > li {
  list-style-type: none;
}

.c0 > li:before {
  position: absolute;
  content: "\\200B";
}

<ul
  className="c0"
>
  <li>
    <button
      type="button"
    >
      Button 1
    </button>
  </li>
  <li>
    <button
      type="button"
    >
      Button 2
    </button>
  </li>
  <li>
    <button
      type="button"
    >
      Button 3
    </button>
  </li>
</ul>
`;

exports[`Inline renders with \`default\` spacing 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: calc(1rem / 2 * -1);
}

.c0 > * {
  margin: calc(1rem / 2);
}

.c0 > li {
  list-style-type: none;
}

.c0 > li:before {
  position: absolute;
  content: "\\200B";
}

<div
  className="c0"
>
  <button
    type="button"
  >
    Button 1
  </button>
  <button
    type="button"
  >
    Button 2
  </button>
  <button
    type="button"
  >
    Button 3
  </button>
</div>
`;

exports[`Inline renders with adjusted spacing 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: -15px;
}

.c0 > * {
  margin: 15px;
}

.c0 > li {
  list-style-type: none;
}

.c0 > li:before {
  position: absolute;
  content: "\\200B";
}

<div
  className="c0"
>
  <button
    type="button"
  >
    Button 1
  </button>
  <button
    type="button"
  >
    Button 2
  </button>
  <button
    type="button"
  >
    Button 3
  </button>
</div>
`;

exports[`Inline renders with custom font-size 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: calc(1rem / 2 * -1);
  font-size: 16px;
}

.c0 > * {
  margin: calc(1rem / 2);
}

.c0 > li {
  list-style-type: none;
}

.c0 > li:before {
  position: absolute;
  content: "\\200B";
}

<div
  className="c0"
  fontSize={16}
>
  <button
    type="button"
  >
    Button 1
  </button>
  <button
    type="button"
  >
    Button 2
  </button>
  <button
    type="button"
  >
    Button 3
  </button>
</div>
`;
